# AutoCython

./: README.en.md  README.md  pyproject.toml  requirements.txt
AutoCython/: AutoCython.py  __init__.py  _version.py  compile.py  run_tasks.py  tools.py
