[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AutoCython-zhang"
dynamic = ["version"]
authors = [{name = "zhang_gavin", email = "qq814608@163.com"}]
description = "自动Cython，使用Cython批量编译.py文件为.pyd文件！"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["cython", "compile", "pyd", "pyc", "python", "autopyd"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "setuptools",
    "cython",
    "rich",
]

[project.urls]
homepage = "https://github.com/zhang0281/AutoCython"
repository = "https://github.com/zhang0281/AutoCython"
documentation = "https://github.com/zhang0281/AutoCython#readme"

[project.scripts]
AutoCython = "AutoCython:main"

[tool.setuptools.dynamic]
version = {attr = "AutoCython._version.__version__"}
